# CPPTextEditor

./: CMakeLists.txt  DocumentHandler.cpp  DocumentHandler.h  EditorWidget.cpp  EditorWidget.h  FileDocker.cpp  FileDocker.h  FileHandler.cpp  FileHandler.h  LineNumberArea.cpp  LineNumberArea.h  MainWindow.cpp  MainWindow.h  PopUpWindow.cpp  PopUpWindow.h  README.md  StartPopup.cpp  StartPopup.h  ToolHandler.cpp  ToolHandler.h  main.cpp
handlerlib/: CMakeLists.txt  DocumentHandler.cpp  DocumentHandler.h  FileHandler.cpp  FileHandler.h  TableHandler.cpp  TableHandler.h  ToolHandler.cpp  ToolHandler.h
